<resources>
    <string name="app_name">ToneList</string>
    <string name="slogan">¡Dile no a la dictadura  musical!.</string>
    <string name="sinCuenta">¿No tienes una cuenta?</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="votarSinRegistro">Comenzar a votar!</string>
    <string name="registrate">Regístrate!</string>
    <string name="mensajeQr">Escribe el código o escanea el QR de la fiesta.</string>
    <string name="escanearQR">Escanear QR</string>
    <string name="escribeElCodigo">Escribe el código</string>
    <string name="validar">Validar</string>
    <string name="lista_principal">Lista Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lista">Lista</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="olvide_contrasena">Olvidé mi contraseña</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="quien_eres_hoy">¿Quién eres el día de hoy?</string>
    <string name="soy_dj">Soy el DJ</string>
    <string name="soy_espectador">Soy un espectador</string>
    <string name="fiesta">Fiesta</string>
    <string name="espectador">Espectador</string>
    <string name="votar_por_canciones">Votar por canciones</string>
    <string name="recomendar_canciones">Recomendar canciones</string>
    <string name="canciones_recomendadas">Canciones que recomendaron</string>
    <string name="canciones_recomendadas_titulo">Canciones recomendadas</string>
    <string name="cambiar_rol">Cambiar de rol</string>
    <string name="salir_del_lugar">Salir de este lugar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="Tonelist">Tonelist</string>
    <string name="nuestros_aliados">Nuestros aliados</string>
    <string name="contacto">Contacto</string>
    <string name="nosotros">Nosotros</string>
    <string name="usuario">Usuario</string>
    <string name="dj">DJ</string>
    <string name="mis_fiestas">Mis fiestas</string>
    <string name="evento">Evento:</string>
    <string name="direccion">Dirección:</string>
    <string name="fecha">Fecha:</string>
    <string name="codigo">Código:</string>
    <string name="canciones_votadas">Canciones votadas</string>
    <string name="canciones_recomendadas_dj">Canciones recomendadas</string>
    <string name="modificar_lista">Modificar lista</string>
    <string name="anadir_fiesta">Añadir fiesta</string>
    <string name="aceptar">Aceptar</string>

    <string name="cancelra">Cancelar</string>

</resources>
