<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"

        >

        <TextView
            android:id="@+id/tv_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:fontFamily="@string/font_family_black"
            android:text="@string/usuario"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/medium" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"

        android:fontFamily="@string/font_family_medium"
        android:text="@string/dj"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
android:layout_marginLeft="40dp"
        android:fontFamily="@string/font_family_regular"
        android:text="@string/mis_fiestas"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/medium"
        android:onClick="misFiestas"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@string/font_family_regular"
        android:text="@string/cambiar_rol"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/medium"
        android:onClick="cambiarRol"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@string/font_family_regular"
        android:text="@string/cerrar_sesion"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/medium"
android:layout_marginBottom="20dp"
        android:onClick="cerrarSesion"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@string/font_family_medium"
        android:text="@string/Tonelist"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@string/font_family_regular"
        android:text="@string/nuestros_aliados"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/medium"
        android:onClick="nuestrosAliados"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@string/font_family_regular"
        android:text="@string/contacto"
        android:textColor="@color/colorWhite"

        android:textSize="@dimen/medium"
        android:onClick="contacto"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@string/font_family_regular"
        android:text="@string/nosotros"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/medium"
        android:onClick="nosotros"

        />
</LinearLayout>
</RelativeLayout>