<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    tools:context="it.save.tonelist.control.IniciarSesion"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo" />

        <TextView
            android:id="@+id/tv_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:fontFamily="@string/font_family_medium"
            android:text="@string/iniciarSesion"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/big"

            />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_slogan"
            android:layout_centerHorizontal="true"
            android:fontFamily="@string/font_family_regular"
            android:hint="@string/correo_electronico"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"            android:textSize="@dimen/medium" />

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_correo"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:fontFamily="@string/font_family_regular"
            android:hint="@string/contrasena"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"            android:textSize="@dimen/medium" />


        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@+id/et_contrasena"
            android:layout_centerHorizontal="true"
            android:background="@drawable/botones_principales"
            android:fontFamily="@string/font_family_regular"
            android:onClick="entrar"
            android:text="@string/entrar"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_entrar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/font_family_black"
            android:onClick="olvideContrasena"
            android:text="@string/olvide_contrasena"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/medium" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:textColor="@color/colorWhite">

        <TextView
            android:id="@+id/tv_sinCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_regular"
            android:text="@string/sinCuenta"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_sinCuenta"
            android:fontFamily="@string/font_family_black"
            android:onClick="registrarse"
            android:text="@string/registrate"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/medium"

            />
    </RelativeLayout>

</RelativeLayout>
