<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_lista"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background">
        <include layout="@layout/dj_bar_menu" />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            >
            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:background="@color/colorWhite"
                android:padding="5dp"
                >
                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"

                    android:layout_centerHorizontal="true"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>


            <Button
                android:id="@+id/btn_canciones_votadas"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_below="@+id/rl"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/botones_principales"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/canciones_votadas"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/medium"
                android:onClick="dj"
                />

            <Button
                android:id="@+id/btn_canciones_recomendadas"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_below="@+id/btn_canciones_votadas"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/botones_principales"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/canciones_recomendadas_dj"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/medium"
                android:onClick="espectador"
                />

            <Button
                android:id="@+id/btn_modificar_lista"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_below="@+id/btn_canciones_recomendadas"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/botones_principales"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/modificar_lista"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/medium"
                android:onClick="espectador"
                />


        </RelativeLayout>



    </LinearLayout>


    <include
        android:id="@+id/dl_menu"
        layout="@layout/dj_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left" />



</android.support.v4.widget.DrawerLayout>
